libs/slim/test/typecheck/fail/swizzle_mask.shader
property vec3 foo;

shader vertex {
    foo.xrs;
    return vec4(0.0, 0.0, 0.0, 1.0);
}
